--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
     "pg": "^7.8.1",
