--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
+    "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "mocha": "^6.0.2",
     "nodemon": "^1.18.10",
     "pg": "^7.8.1",
