i# This is a combination of 2 commits.
[feature] Add a user model

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:undo": "rm -rf ./server/build",
     "build:start": "npm run build && node ./server/build/index.js",
     "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./server/src/index.js",
-    "test": "npm run test:db && cross-env NODE_ENV=test nyc --reporter=html --reporter=text --reporter=lcov mocha --require @babel/register ./server/test/*.test.js --timeout 20000 --exit",
+    "test": "cross-env NODE_ENV=test nyc --reporter=html --reporter=text --reporter=lcov mocha --require @babel/register ./server/test/*.test.js --timeout 20000 --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test:db": "cross-env NODE_ENV=test npm run migrate:undo && cross-env NODE_ENV=test npm run migrate && cross-env NODE_ENV=test npm run seed",
+    "pretest": "cross-env NODE_ENV=test npm run migrate:undo && cross-env NODE_ENV=test npm run migrate && cross-env NODE_ENV=test npm run seed",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed:all",
     "migrate:undo": "sequelize db:migrate:undo:all"
@@ -36,6 +36,7 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
