[bug-fix]: code refactoring - fix bug on get one note - refactor seeders to hide sensitive information

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 USERNAME=
 PASSWORD=
 HOST=localhost
-DATABASE_DEV=postgres
-DATABASE_TEST=postgres_test
+DATABASE_DEV=
+DATABASE_TEST=
+USER_PASSWORD=
